Fix Activities in index page

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                               <div class="hero">
                                     
                                           <div class="centered">
-                                    <h1 class="wow fadeInUp" data-wow-delay="0.1s"><i class="fas fa-fire-alt"></i> Actives</h1>
+                                    <h1 class="wow fadeInUp" data-wow-delay="0.1s"><i class="fas fa-fire-alt"></i> Activities</h1>
                               </div>
 
                               </div>
