--- a/cybersec.html
+++ b/cybersec.html
@@ -174,7 +174,7 @@
                                     <img rel="preload" as="image" class="wow fadeInUp center border border-light round" data-wow-delay="0.5s" src="pic/Awesome tools.png" alt="Cookie" style="width: 100%; height: auto">
                                     <br></br>
                                     <p class="wow fadeInUp" data-wow-delay="0.5s">
-                                         Tool ที่ใช้ในด้าน Cyber Security เจ็งๆ ที่เราแนะนำ
+                                         Tool ที่ใช้ในด้าน Cyber Security เจ๋งๆ ที่เราแนะนำ
                                     </p>
                                     <button type="button" onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md'" class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp" data-wow-delay="0.5s" ><i class="fa-solid fa-arrow-up-right-from-square"></i> Learn more!</button>
                                     <br></br>
