--- a/activities.html
+++ b/activities.html
@@ -16,14 +16,14 @@
       <meta http-equiv="refresh" content="500" />
 
       <meta property="og:title" content="TNI Cybersec">
-      <meta property="og:image" content="pic/HanaLogoWeb.png">
-      <meta property="og:description" content="Actives">
+      <meta property="og:image" content="pic/TNICyberWebIcon.png">
+      <meta property="og:description" content="Cybersec">
       <meta property="og:url" content="https://tni-cybersec.github.io">
 
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="TNI Cybersec">
-      <meta name="twitter:image" content="pic/HanaLogoWeb.png">
-      <meta name="twitter:description" content="Actives">
+      <meta name="twitter:image" content="pic/TNICyberWebIcon.png">
+      <meta name="twitter:description" content="Cybersec">
       <meta name="twitter:site" content="https://tni-cybersec.github.io">
 
       <title>Activities</title>
@@ -101,7 +101,7 @@
 
                   <ul id="menu">
                         <li><a href="cybersec.html" class="borderFade"><i class="fas fa-user-ninja"></i> Cybersec<span></span></a></li>
-                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Actives<span></span></a></li>
+                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Activities<span></span></a></li>
                         <li><a href="aboutme.html" class="borderFade"><i class="fas fa-info-circle"></i> About Me<span></span></a></li>
                         <li><a href="" class="borderFade rainbowText" data-toggle="modal" data-target="#social"><i class="fas fa-handshake"></i> Join us!<span></span></a></li>
                   </ul>
@@ -119,7 +119,7 @@
 
                  <ul id="menu">
                         <li><a href="cybersec.html" class="borderFade"><i class="fas fa-user-ninja"></i> Cybersec<span></span></a></li>
-                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Actives<span></span></a></li>
+                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Activities<span></span></a></li>
                         <li><a href="aboutme.html" class="borderFade"><i class="fas fa-info-circle"></i> About Me<span></span></a></li>
                         <li><a href="" class="borderFade rainbowText" data-toggle="modal" data-target="#social"><i class="fas fa-handshake"></i> Join us!<span></span></a></li>
                   </ul>
