--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="theme-color" content="#000000">
-      <meta name="HANA Homemade" content="404">
+      <meta name="TNI Cybersec" content="404">
 
       <title>404</title>
 
@@ -64,7 +64,9 @@
                              
                               <h1 class="wow fadeInUp" data-wow-delay="0.1s">404 Page not found</h1>
                               <h1 class="wow fadeInUp" data-wow-delay="0.1s">😖😖😖</h1>
-                              <h3 class="wow fadeInUp " data-wow-delay="0.3s">ขอโทษนะที่หน้านี้ไม่มีอะ</h3>
+                              <h3 class="wow fadeInUp " data-wow-delay="0.3s">Never gonna give you up.</h3>
+                              <h3 class="wow fadeInUp " data-wow-delay="0.3s">Never gonna let you down.</h3>
+                              <h3 class="wow fadeInUp " data-wow-delay="0.3s">Never gonna run around and desert you.</h3>
 
                         </div>
                   </div>
