--- a/activities.html
+++ b/activities.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="theme-color" content="#000000">
-      <meta name="HANA Homemade" content="Actives">
+      <meta name="TNI Cybersec" content="Activities">
 
       <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
       <meta http-equiv="cache-control" content="max-age=0" />
@@ -17,13 +17,13 @@
 
       <meta property="og:title" content="TNI Cybersec">
       <meta property="og:image" content="pic/TNICyberWebIcon.png">
-      <meta property="og:description" content="Cybersec">
+      <meta property="og:description" content="Activities">
       <meta property="og:url" content="https://tni-cybersec.github.io">
 
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="TNI Cybersec">
       <meta name="twitter:image" content="pic/TNICyberWebIcon.png">
-      <meta name="twitter:description" content="Cybersec">
+      <meta name="twitter:description" content="Activities">
       <meta name="twitter:site" content="https://tni-cybersec.github.io">
 
       <title>Activities</title>
