--- a/cybersec.html
+++ b/cybersec.html
@@ -95,7 +95,7 @@
       
                         <ul id="menu">
                               <li><a href="cybersec.html" class="borderFade"><i class="fas fa-user-ninja"></i> Cybersec<span></span></a></li>
-                              <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Actives<span></span></a></li>
+                              <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Activities<span></span></a></li>
                               <li><a href="aboutme.html" class="borderFade"><i class="fas fa-info-circle"></i> About Me<span></span></a></li>
                               <li><a href="" class="borderFade rainbowText" data-toggle="modal" data-target="#social"><i class="fas fa-handshake"></i> Join us!<span></span></a></li>
                         </ul>
@@ -113,7 +113,7 @@
       
                        <ul id="menu">
                               <li><a href="cybersec.html" class="borderFade"><i class="fas fa-user-ninja"></i> Cybersec<span></span></a></li>
-                              <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Actives<span></span></a></li>
+                              <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Activities<span></span></a></li>
                               <li><a href="aboutme.html" class="borderFade"><i class="fas fa-info-circle"></i> About Me<span></span></a></li>
                               <li><a href="" class="borderFade rainbowText" data-toggle="modal" data-target="#social"><i class="fas fa-handshake"></i> Join us!<span></span></a></li>
                         </ul>
