--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
       <meta property="og:title" content="TNI Cybersec">
       <meta property="og:image" content="pic/TNICyberWebIcon.png">
-      <meta property="og:description" content="Who am I">
+      <meta property="og:description" content="Hello World!">
       <meta property="og:url" content="https://tni-cybersec.github.io">
 
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="TNI Cybersec">
       <meta name="twitter:image" content="pic/TNICyberWebIcon.png">
-      <meta name="twitter:description" content="BWho am I">
+      <meta name="twitter:description" content="Hello World!">
       <meta name="twitter:site" content="https://tni-cybersec.github.io">
 
       <title>TNI Cybersec</title>
@@ -92,7 +92,7 @@
 
                   <ul id="menu">
                         <li><a href="cybersec.html" class="borderFade"><i class="fas fa-user-ninja"></i> Cybersec<span></span></a></li>
-                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Actives<span></span></a></li>
+                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Activities<span></span></a></li>
                         <li><a href="aboutme.html" class="borderFade"><i class="fas fa-info-circle"></i> About Me<span></span></a></li>
                         <li><a href="" class="borderFade rainbowText" data-toggle="modal" data-target="#social"><i class="fas fa-handshake"></i> Join us!<span></span></a></li>
                   </ul>
@@ -110,7 +110,7 @@
 
                  <ul id="menu">
                         <li><a href="cybersec.html" class="borderFade"><i class="fas fa-user-ninja"></i> Cybersec<span></span></a></li>
-                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Actives<span></span></a></li>
+                        <li><a href="activities.html" class="borderFade"><i class="fas fa-fire-alt"></i> Activities<span></span></a></li>
                         <li><a href="aboutme.html" class="borderFade"><i class="fas fa-info-circle"></i> About Me<span></span></a></li>
                         <li><a href="" class="borderFade rainbowText" data-toggle="modal" data-target="#social"><i class="fas fa-handshake"></i> Join us!<span></span></a></li>
                   </ul>
