Arrange img folder

--- a/404.html
+++ b/404.html
@@ -30,8 +30,8 @@
              rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=Mitr:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
              rel="stylesheet">
-      <link rel="icon" href="pic/TNICyberWebIcon.png">
-      <link rel="shortcut icon" href="pic/TNICyberWebIcon.png">
+      <link rel="icon" href="img/TNICyberWebIcon.png">
+      <link rel="shortcut icon" href="img/TNICyberWebIcon.png">
 
 
       <!-- terminal effect -->
@@ -49,7 +49,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand" class="circleScaleBtn2 logo" onclick="location.href='index.html'">
-                        <img rel="preload" as="image" width="auto" height="55" src="pic/TNICyberWeb.png"></img>  
+                        <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png"></img>  
                   </span>
             </nav>
 
