Arrange assets folder

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
     <!-- stylesheet -->
     <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- bootstrap cdns -->
     <link
@@ -54,11 +54,11 @@
     <link rel="shortcut icon" href="img/TNICyberWebIcon.png" />
 
     <!-- terminal effect -->
-    <script src="t.min.js"></script>
+    <script src="js/t.min.js"></script>
 
     <!-- for on scroll animations -->
-    <link rel="stylesheet" href="animate.css" />
-    <script src="wow.min.js"></script>
+    <link rel="stylesheet" href="css/animate.min.css" />
+    <script src="js/wow.min.js"></script>
   </head>
 
   <body>
@@ -130,7 +130,7 @@
       <br />
     </div>
 
-    <script src="cookie.js"></script>
+    <script src="js/cookie.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
