--- a/activities.html
+++ b/activities.html
@@ -31,7 +31,7 @@
     <title>Activities</title>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- bootstrap cdns -->
     <link
@@ -74,8 +74,8 @@
     <link rel="shortcut icon" href="img/TNICyberWebIcon.png" />
 
     <!-- for on scroll animations -->
-    <link rel="stylesheet" href="animate.css" />
-    <script src="wow.min.js"></script>
+    <link rel="stylesheet" href="css/animate.min.css" />
+    <script src="js/wow.min.js"></script>
   </head>
 
   <body>
@@ -486,7 +486,7 @@
         <br />
       </div>
 
-      <script src="cookie.js"></script>
+      <script src="js/cookie.js"></script>
 
       <div
         id="social"
