--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>TNI Cybersec</title>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- bootstrap cdns -->
     <link
@@ -64,8 +64,8 @@
     <link rel="shortcut icon" href="img/TNICyberWebIcon.png" />
 
     <!-- for on scroll animations -->
-    <link rel="stylesheet" href="animate.css" />
-    <script src="wow.min.js"></script>
+    <link rel="stylesheet" href="css/animate.min.css" />
+    <script src="js/wow.min.js"></script>
   </head>
 
   <body>
@@ -432,7 +432,7 @@
       </div>
     </div>
 
-    <script src="cookie.js"></script>
+    <script src="js/cookie.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
