Implement created components

--- a/404.html
+++ b/404.html
@@ -80,7 +80,6 @@
           />
         </span>
       </nav>
-
       <!--------------- navbar ends here --------------->
 
       <!--------------- hero section starts here --------------->
@@ -131,6 +130,7 @@
     </div>
 
     <script src="js/cookie.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
