--- a/cybersec.html
+++ b/cybersec.html
@@ -103,316 +103,166 @@
     <div id="loader"></div>
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
-      <div class="wrapper">
-        <!--------------- navbar starts here --------------->
-        <nav>
-          <span
-            id="brand"
-            class="circleScaleBtn2 logo"
-            onclick="location.href='index.html'"
-          >
-            <img width="auto" height="55" src="img/TNICyberWeb.png" />
-          </span>
+      <div id="navigation"></div>
+      <!--------------- navbar ends here --------------->
 
-          <ul id="menu">
-            <li>
-              <a href="cybersec.html" class="borderFade"
-                ><i class="fas fa-user-ninja"></i> Cybersec<span></span
-              ></a>
-            </li>
-            <li>
-              <a href="activities.html" class="borderFade"
-                ><i class="fas fa-fire-alt"></i> Activities<span></span
-              ></a>
-            </li>
-            <li>
-              <a href="aboutme.html" class="borderFade"
-                ><i class="fas fa-info-circle"></i> About Me<span></span
-              ></a>
-            </li>
-            <li>
-              <a
-                href=""
-                class="borderFade rainbowText"
-                data-toggle="modal"
-                data-target="#social"
-                ><i class="fas fa-handshake"></i> Join us!<span></span
-              ></a>
-            </li>
-          </ul>
+      <div class="whitespace"></div>
 
-          <div id="toggle">
-            <i class="fas fa-bars wow fadeInUp span" data-wow-delay="0.6s "></i>
-          </div>
-        </nav>
+      <!--------------- hero section starts here --------------->
+      <div class="container">
+        <div class="hero-content">
+          <br />
 
-        <div id="resize">
-          <div class="close-btn">
-            <i
-              class="far fa-times-circle wow fadeInUp span"
-              data-wow-delay="0.6s "
-            ></i>
-          </div>
-
-          <ul id="menu">
-            <li>
-              <a href="cybersec.html" class="borderFade"
-                ><i class="fas fa-user-ninja"></i> Cybersec<span></span
-              ></a>
-            </li>
-            <li>
-              <a href="activities.html" class="borderFade"
-                ><i class="fas fa-fire-alt"></i> Activities<span></span
-              ></a>
-            </li>
-            <li>
-              <a href="aboutme.html" class="borderFade"
-                ><i class="fas fa-info-circle"></i> About Me<span></span
-              ></a>
-            </li>
-            <li>
-              <a
-                href=""
-                class="borderFade rainbowText"
-                data-toggle="modal"
-                data-target="#social"
-                ><i class="fas fa-handshake"></i> Join us!<span></span
-              ></a>
-            </li>
-          </ul>
-        </div>
-
-        <!--------------- navbar ends here --------------->
-
-        <div class="whitespace"></div>
-
-        <!--------------- hero section starts here --------------->
-        <div class="container">
-          <div class="hero-content">
-            <br />
-
-            <div class="row">
-              <div class="col-lg-12">
-                <h1 class="wow fadeInUp" data-wow-delay="0.4s">
-                  <i class="fas fa-user-ninja"></i> Cybersec
-                </h1>
-                <p class="wow fadeInUp user-select-none" data-wow-delay="0.5s">
-                  หัวข้อในด้านต่างๆของ Cyber Security
-                  ที่เราได้รวบรวมและจัดหมวดหมู่ไว้แล้ว
-                </p>
-              </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <h1 class="wow fadeInUp" data-wow-delay="0.4s">
+                <i class="fas fa-user-ninja"></i> Cybersec
+              </h1>
+              <p class="wow fadeInUp user-select-none" data-wow-delay="0.5s">
+                หัวข้อในด้านต่างๆของ Cyber Security
+                ที่เราได้รวบรวมและจัดหมวดหมู่ไว้แล้ว
+              </p>
             </div>
           </div>
         </div>
-
-        <!--------------- hero section ends here --------------->
-
-        <!--------------- content info section starts here --------------->
-        <div class="container">
-          <div class="hero-content">
-            <br />
-            <div class="row">
-              <div class="col-lg-12">
-                <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                  🧛‍♂️ Vulnerability
-                </h2>
-                <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
-                  <span class="badge badge-light">🧛‍♂️ Vulnerability</span>
-                </h4>
-                <img
-                  rel="preload"
-                  as="image"
-                  class="wow fadeInUp center border border-light round"
-                  data-wow-delay="0.5s"
-                  src="img/Vulnerability.png"
-                  alt="Toffee Cake"
-                  style="width: 100%; height: auto"
-                />
-                <br />
-                <p class="wow fadeInUp" data-wow-delay="0.5s">
-                  ช่องโหว่ Cyber Security ในด้านต่างๆที่น่าสนใจ
-                </p>
-                <button
-                  type="button"
-                  onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md'"
-                  class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
-                  data-wow-delay="0.5s"
-                >
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
-                  more!
-                </button>
-                <br />
-
-                <h2 class="wow fadeInUp" data-wow-delay="0.4s">👨‍💻 Writeups</h2>
-                <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
-                  <span class="badge badge-light">👨‍💻 CTF Writeups</span>
-                </h4>
-                <img
-                  rel="preload"
-                  as="image"
-                  class="wow fadeInUp center border border-light round"
-                  data-wow-delay="0.5s"
-                  src="img/Writeups.png"
-                  alt="Japanese Egg Cake"
-                  style="width: 100%; height: auto"
-                />
-                <br />
-                <p class="wow fadeInUp" data-wow-delay="0.5s">
-                  Writeups ของงาน Cyber Security CTF ต่างๆที่น่าสนใจ
-                </p>
-                <button
-                  type="button"
-                  onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md'"
-                  class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
-                  data-wow-delay="0.5s"
-                >
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
-                  more!
-                </button>
-                <br />
-
-                <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                  🛠 Awesome tools
-                </h2>
-                <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
-                  <span class="badge badge-light">🛠 Tools</span>
-                </h4>
-                <img
-                  rel="preload"
-                  as="image"
-                  class="wow fadeInUp center border border-light round"
-                  data-wow-delay="0.5s"
-                  src="img/Awesome tools.png"
-                  alt="Cookie"
-                  style="width: 100%; height: auto"
-                />
-                <br />
-                <p class="wow fadeInUp" data-wow-delay="0.5s">
-                  Tool ที่ใช้ในด้าน Cyber Security เจ๋งๆ ที่เราแนะนำ
-                </p>
-                <button
-                  type="button"
-                  onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md'"
-                  class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
-                  data-wow-delay="0.5s"
-                >
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
-                  more!
-                </button>
-                <br />
-
-                <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                  🤷‍♂️ For Beginner
-                </h2>
-                <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
-                  <span class="badge badge-light">🤷‍♂️ Beginner</span>
-                </h4>
-                <img
-                  rel="preload"
-                  as="image"
-                  class="wow fadeInUp center border border-light round"
-                  data-wow-delay="0.5s"
-                  src="img/For Beginner.png"
-                  alt="Cookie"
-                  style="width: 100%; height: auto"
-                />
-                <br />
-                <p class="wow fadeInUp" data-wow-delay="0.5s">
-                  จุดเริ่มต้นในสาย Cyber Security ที่เราแนะนำ
-                </p>
-                <button
-                  type="button"
-                  onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/forbeginner.md'"
-                  class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
-                  data-wow-delay="0.5s"
-                >
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
-                  more!
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--------------- types section ends here --------------->
-
-        <!--------------- footer starts here --------------->
-        <div class="footer">
-          <div class="container">
-            <div class="collab">
-              <div class="row">
-                <div class="col-lg-12">
-                  <p class="wow fadeInUp"></p>
-                </div>
-              </div>
-            </div>
-
-            <br />
-
-            <div class="hr">
-              <div class="row"></div>
-            </div>
-
-            <br />
-
-            <div class="info">
-              <div class="row">
-                <div class="col-md-4" id="personal">
-                  <h5 class="wow fadeInUp footer" data-wow-delay="0.2s">
-                    <img
-                      rel="preload"
-                      as="image"
-                      width="auto"
-                      height="55"
-                      src="img/TNICyberWeb.png"
-                    />
-                  </h5>
-                  <p
-                    class="wow fadeInUp list badge badge-pill circleScaleBtn2"
-                    type="button"
-                    onclick="location.href='https://creativecommons.org/publicdomain/zero/1.0/'"
-                  >
-                    <i class="fab fa-creative-commons"></i>
-                    <i class="fab fa-creative-commons-zero"></i>
-                    <i class="fab fa-creative-commons-share"></i>
-                  </p>
-                </div>
-
-                <div class="col-md-8" id="media">
-                  <ul>
-                    <li
-                      class="wow fadeInUp"
-                      data-wow-delay="0.4s"
-                      data-toggle="modal"
-                      data-target="#social"
-                    >
-                      <p
-                        class="wow fadeInUp list1 badge badge-pill badge-light circleScaleBtn2"
-                        type="button"
-                      >
-                        <i class="fab fa-facebook-messenger"></i>
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-discord"></i>
-                      </p>
-                    </li>
-                  </ul>
-                  <p
-                    class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2"
-                    type="button"
-                    onclick="location.href='termsofservice.html'"
-                  >
-                    <i class="fas fa-info-circle"></i> ข้อกำหนด
-                    นโยบายความเป็นส่วนตัว
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--------------- footer ends here --------------->
-
-        <br />
       </div>
+
+      <!--------------- hero section ends here --------------->
+
+      <!--------------- content info section starts here --------------->
+      <div class="container">
+        <div class="hero-content">
+          <br />
+          <div class="row">
+            <div class="col-lg-12">
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                🧛‍♂️ Vulnerability
+              </h2>
+              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
+                <span class="badge badge-light">🧛‍♂️ Vulnerability</span>
+              </h4>
+              <img
+                rel="preload"
+                as="image"
+                class="wow fadeInUp center border border-light round"
+                data-wow-delay="0.5s"
+                src="img/Vulnerability.png"
+                alt="Toffee Cake"
+                style="width: 100%; height: auto"
+              />
+              <br />
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                ช่องโหว่ Cyber Security ในด้านต่างๆที่น่าสนใจ
+              </p>
+              <button
+                type="button"
+                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/vulnerability.md'"
+                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.5s"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
+                more!
+              </button>
+              <br />
+
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">👨‍💻 Writeups</h2>
+              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
+                <span class="badge badge-light">👨‍💻 CTF Writeups</span>
+              </h4>
+              <img
+                rel="preload"
+                as="image"
+                class="wow fadeInUp center border border-light round"
+                data-wow-delay="0.5s"
+                src="img/Writeups.png"
+                alt="Japanese Egg Cake"
+                style="width: 100%; height: auto"
+              />
+              <br />
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                Writeups ของงาน Cyber Security CTF ต่างๆที่น่าสนใจ
+              </p>
+              <button
+                type="button"
+                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/writeups.md'"
+                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.5s"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
+                more!
+              </button>
+              <br />
+
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                🛠 Awesome tools
+              </h2>
+              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
+                <span class="badge badge-light">🛠 Tools</span>
+              </h4>
+              <img
+                rel="preload"
+                as="image"
+                class="wow fadeInUp center border border-light round"
+                data-wow-delay="0.5s"
+                src="img/Awesome tools.png"
+                alt="Cookie"
+                style="width: 100%; height: auto"
+              />
+              <br />
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                Tool ที่ใช้ในด้าน Cyber Security เจ๋งๆ ที่เราแนะนำ
+              </p>
+              <button
+                type="button"
+                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/awesometools.md'"
+                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.5s"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
+                more!
+              </button>
+              <br />
+
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                🤷‍♂️ For Beginner
+              </h2>
+              <h4 class="bage wow fadeInUp" data-wow-delay="0.5s">
+                <span class="badge badge-light">🤷‍♂️ Beginner</span>
+              </h4>
+              <img
+                rel="preload"
+                as="image"
+                class="wow fadeInUp center border border-light round"
+                data-wow-delay="0.5s"
+                src="img/For Beginner.png"
+                alt="Cookie"
+                style="width: 100%; height: auto"
+              />
+              <br />
+              <p class="wow fadeInUp" data-wow-delay="0.5s">
+                จุดเริ่มต้นในสาย Cyber Security ที่เราแนะนำ
+              </p>
+              <button
+                type="button"
+                onclick="location.href='https://github.com/TNI-Cybersec/.github/blob/main/profile/forbeginner.md'"
+                class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.5s"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Learn
+                more!
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--------------- types section ends here --------------->
+
+      <!--------------- footer starts here --------------->
+      <div id="footer"></div>
+      <!--------------- footer ends here --------------->
+
+      <br />
 
       <div class="cookie-container">
         <br />
@@ -491,6 +341,7 @@
       </div>
 
       <script src="js/cookie.js"></script>
+      <script src="js/script.js"></script>
 
       <!-- greensock cdn -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
