--- a/index.html
+++ b/index.html
@@ -104,83 +104,7 @@
     <div id="loader"></div>
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
-      <nav>
-        <span
-          id="brand"
-          class="circleScaleBtn2 logo"
-          onclick="location.href='index.html'"
-        >
-          <img width="auto" height="55" src="img/TNICyberWeb.png" />
-        </span>
-
-        <ul id="menu">
-          <li>
-            <a href="cybersec.html" class="borderFade"
-              ><i class="fas fa-user-ninja"></i> Cybersec<span></span
-            ></a>
-          </li>
-          <li>
-            <a href="activities.html" class="borderFade"
-              ><i class="fas fa-fire-alt"></i> Activities<span></span
-            ></a>
-          </li>
-          <li>
-            <a href="aboutme.html" class="borderFade"
-              ><i class="fas fa-info-circle"></i> About Me<span></span
-            ></a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="borderFade rainbowText"
-              data-toggle="modal"
-              data-target="#social"
-              ><i class="fas fa-handshake"></i> Join us!<span></span
-            ></a>
-          </li>
-        </ul>
-
-        <div id="toggle">
-          <i class="fas fa-bars wow fadeInUp span" data-wow-delay="0.6s "></i>
-        </div>
-      </nav>
-
-      <div id="resize">
-        <div class="close-btn">
-          <i
-            class="far fa-times-circle wow fadeInUp span"
-            data-wow-delay="0.6s "
-          ></i>
-        </div>
-
-        <ul id="menu">
-          <li>
-            <a href="cybersec.html" class="borderFade"
-              ><i class="fas fa-user-ninja"></i> Cybersec<span></span
-            ></a>
-          </li>
-          <li>
-            <a href="activities.html" class="borderFade"
-              ><i class="fas fa-fire-alt"></i> Activities<span></span
-            ></a>
-          </li>
-          <li>
-            <a href="aboutme.html" class="borderFade"
-              ><i class="fas fa-info-circle"></i> About Me<span></span
-            ></a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="borderFade rainbowText"
-              data-toggle="modal"
-              data-target="#social"
-              ><i class="fas fa-handshake"></i> Join us!<span></span
-            ></a>
-          </li>
-        </ul>
-      </div>
-
+      <div id="navigation"></div>
       <!--------------- navbar ends here --------------->
 
       <!--------------- hero section starts here --------------->
@@ -280,78 +204,7 @@
     <!--------------- projects section ends here --------------->
 
     <!--------------- footer starts here --------------->
-    <div class="footer">
-      <div class="container">
-        <div class="collab">
-          <div class="row">
-            <div class="col-lg-12">
-              <p class="wow fadeInUp"></p>
-            </div>
-          </div>
-        </div>
-
-        <br />
-
-        <div class="hr">
-          <div class="row"></div>
-        </div>
-
-        <br />
-
-        <div class="info">
-          <div class="row">
-            <div class="col-md-4" id="personal">
-              <h5 class="wow fadeInUp footer" data-wow-delay="0.2s">
-                <img
-                  rel="preload"
-                  as="image"
-                  width="auto"
-                  height="55"
-                  src="img/TNICyberWeb.png"
-                />
-              </h5>
-              <p
-                class="wow fadeInUp list badge badge-pill circleScaleBtn2"
-                type="button"
-                onclick="location.href='https://creativecommons.org/publicdomain/zero/1.0/'"
-              >
-                <i class="fab fa-creative-commons"></i>
-                <i class="fab fa-creative-commons-zero"></i>
-                <i class="fab fa-creative-commons-share"></i>
-              </p>
-            </div>
-
-            <div class="col-md-8" id="media">
-              <ul>
-                <li
-                  class="wow fadeInUp"
-                  data-wow-delay="0.4s"
-                  data-toggle="modal"
-                  data-target="#social"
-                >
-                  <p
-                    class="wow fadeInUp list1 badge badge-pill badge-light circleScaleBtn2"
-                    type="button"
-                  >
-                    <i class="fab fa-facebook-messenger"></i>
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-discord"></i>
-                  </p>
-                </li>
-              </ul>
-              <p
-                class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2"
-                type="button"
-                onclick="location.href='termsofservice.html'"
-              >
-                <i class="fas fa-info-circle"></i> ข้อกำหนด
-                นโยบายความเป็นส่วนตัว
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="footer"></div>
     <!--------------- footer ends here --------------->
 
     <br />
@@ -433,6 +286,7 @@
     </div>
 
     <script src="js/cookie.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
