Change location.href ➡️ window.open

--- a/common/footer.html
+++ b/common/footer.html
@@ -31,7 +31,7 @@
           <p
             class="wow fadeInUp list badge badge-pill circleScaleBtn2"
             type="button"
-            onclick="location.href='https://creativecommons.org/publicdomain/zero/1.0/'"
+            onclick="window.open('https://creativecommons.org/publicdomain/zero/1.0/')"
           >
             <i class="fab fa-creative-commons"></i>
             <i class="fab fa-creative-commons-zero"></i>
