Fix navbar toggle not working

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -71,3 +71,20 @@
     </li>
   </ul>
 </div>
+
+<script>
+  $("#toggle").click(function () {
+    $(this).toggleClass("on");
+    $("#resize").toggleClass("active");
+  });
+
+  $("#resize ul li a").click(function () {
+    $(this).toggleClass("on");
+    $("#resize").toggleClass("active");
+  });
+
+  $(".close-btn").click(function () {
+    $(this).toggleClass("on");
+    $("#resize").toggleClass("active");
+  });
+</script>
