Fix some bugs and refactor code

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -73,6 +73,7 @@
 </div>
 
 <script>
+  // navigation starts here
   $("#toggle").click(function () {
     $(this).toggleClass("on");
     $("#resize").toggleClass("active");
@@ -87,4 +88,25 @@
     $(this).toggleClass("on");
     $("#resize").toggleClass("active");
   });
+  // navigation ends here
+
+  // nav animation
+  TweenMax.from("#brand", 1, {
+    delay: 0.4,
+    y: 10,
+    opacity: 0,
+    ease: Expo.easeInOut,
+  });
+
+  TweenMax.staggerFrom(
+    "#menu li a",
+    1,
+    {
+      delay: 0.4,
+      opacity: 0,
+      ease: Expo.easeInOut,
+    },
+    0.1
+  );
+  // nav animation ends
 </script>
