Implement socialcard component

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -72,7 +72,11 @@
   </ul>
 </div>
 
+<div id="joinus"></div>
+
 <script>
+  $("#joinus").load("common/socialcard.html");
+
   // navigation starts here
   $("#toggle").click(function () {
     $(this).toggleClass("on");
