--- a/index.html
+++ b/index.html
@@ -209,30 +209,9 @@
 
     <br />
 
-    <div class="cookie-container">
-      <br />
-      <h3><i class="fas fa-cookie-bite"></i> We use cookies.</h3>
-      <p>
-        เราใช้คุกกี้ในเว็บไซต์นี้เพื่อให้คุณได้รับประสบการณ์ที่ดีที่สุดในการให้บริการนี้
-        โปรดอ่านข้อมูลเพิ่มเติมได้ที่ <i class="fas fa-arrow-circle-down"></i>
-      </p>
-      <button
-        type="button"
-        onclick="location.href='termsofservice.html'"
-        class="btn btn-outline-dark btn-block"
-      >
-        <i class="fas fa-info-circle"></i> Terms of service
-      </button>
-      <button
-        type="button"
-        class="cookie-btn btn btn-outline-dark btn-warning btn-lg btn-block"
-      >
-        <i class="fas fa-check-circle"></i> ยอมรับ
-      </button>
-      <br />
-    </div>
+    <div id="cookie-banner"></div>
 
-    <script src="js/cookie.js"></script>
+    <!-- javascript -->
     <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
