Implement cookie-banner component

--- a/activities.html
+++ b/activities.html
@@ -423,7 +423,9 @@
           </div>
         </div>
 
-        <script src="js/cookie.js"></script>
+        <div id="cookie-banner"></div>
+
+        <!-- javascript -->
         <script src="js/script.js"></script>
 
         <!-- greensock cdn -->
