--- a/404.html
+++ b/404.html
@@ -129,7 +129,9 @@
       <br />
     </div>
 
-    <script src="js/cookie.js"></script>
+    <div id="cookie-banner"></div>
+
+    <!-- javascript -->
     <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
