--- a/aboutme.html
+++ b/aboutme.html
@@ -229,7 +229,9 @@
       <br />
     </div>
 
-    <script src="js/cookie.js"></script>
+    <div id="cookie-banner"></div>
+
+    <!-- javascript -->
     <script src="js/script.js"></script>
 
     <!-- greensock cdn -->
