Change location.href ➡️ window.open

--- a/common/social-card.html
+++ b/common/social-card.html
@@ -15,7 +15,7 @@
       <div class="modal-body">
         <button
           type="button"
-          onclick="location.href='https://m.me/TNICybersec'"
+          onclick="window.open('https://m.me/TNICybersec')"
           class="btn btn-outline-dark btn-lg btn-block"
         >
           <i class="fab fa-facebook-messenger"></i> TNI Cybersec
@@ -23,7 +23,7 @@
         <br />
         <button
           type="button"
-          onclick="location.href='https://fb.me/TNICybersec'"
+          onclick="window.open('https://fb.me/TNICybersec')"
           class="btn btn-outline-dark btn-lg btn-block"
         >
           <i class="fab fa-facebook"></i> TNI Cybersec
@@ -31,7 +31,7 @@
         <br />
         <button
           type="button"
-          onclick="location.href='https://discord.gg/ETMkrHSGZG'"
+          onclick="window.open('https://discord.gg/ETMkrHSGZG')"
           class="btn btn-outline-dark btn-lg btn-block"
         >
           <i class="fab fa-discord"></i> TNI Cybersec
