Edit: socialcard ➡️ social-card

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -75,7 +75,7 @@
 <div id="joinus"></div>
 
 <script>
-  $("#joinus").load("common/socialcard.html");
+  $("#joinus").load("common/social-card.html");
 
   // navigation starts here
   $("#toggle").click(function () {
