Edit: location.href ➡️ window.open

--- a/aboutme.html
+++ b/aboutme.html
@@ -185,7 +185,7 @@
               </p>
               <button
                 type="button"
-                onclick="location.href='https://github.com/TNI-Cybersec/tni-cybersec.github.io'"
+                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
                 class="btn btn-outline-light btn-lg btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.5s"
               >
