--- a/aboutme.html
+++ b/aboutme.html
@@ -123,8 +123,8 @@
                 <i class="fas fa-user-ninja"></i> TNI Cybersec
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย
-                Thai-Nichi Institute of Technology เป็นแกนนำหลัก
+                เป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
+                Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก
               </p>
               <img
                 rel="preload"
